      file is installed.

    * Magic plugin development docs created.  On Linux/Unix, installed into
      /usr/[local/]share/docs/tuxpaint-dev/ by default.

    * Ported existing magic tools to the new Magic tool plug-in system:
      (Blur, Fill, Lighten, Darken, Mirror, Flip, Rainbow, Blocks, Chalk,
      Grass, Negative, Tint, Smudge, Drip, Cartoon, Brick (large & small))

  * New Brushes
    -----------
    * Sparkles (based on old Magic Tool)

  * New Magic tools:
    ----------------
    * Kalidescope
    * Glass Tile
    * Emboss
    * Metal Paint
    * Waves
    * Flower
      (utilizes Bezier curve example code from Wikipedia.org)
    * Foam

  * New Localizations:
    ------------------
    * Thai input method
      Ed Montgomery <edm@rocketmail.com>

    * Wolof translation
      Haby Diallo <haby42@yahoo.fr>

  * Localization Updates:
    ---------------------
    * British English translation
      Caroline Ford <caroline.ford.work@googlemail.com>

    * Dutch translation
      Freek de Kruijf <f.de.kruijf@hetnet.nl>

    * Italian translation
      Flavio "Iron Bishop" Pastore <ironbishop@fsfe.org>

    * South African English translation
      Caroline Ford <caroline.ford.work@googlemail.com>


2007.July.1 (0.9.17)

  * Interface Improvements:
    -----------------------
    * Mouse cursor can be hidden (e.g., using "--hidecursor"), useful on
      touchscreen devices like tablet PCs or the Nokia Mameo devices.
      (Addresses SourceForge RFE #1673344)

    * Added an "autosave" option that assumes you wish to save the current
      picture during Quit.  (Additionally, after saving during Quit or Open,
      it no longer shows 'success' pop-up that must be dismissed.)
      (Addresses SourceForge RFE #1680500)

    * Screen size can be rotated using the "--orient=portrait" command-line
      option or "orient=portait" configuration file setting.  This swaps
      the width and height values used for window or screen size.